--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ redis = "^3.5.3"
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
 freezegun = "^1.0.0"
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
