--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ redis = "^3.5.3"
 pytest = "^6.1.1"
 freezegun = "^1.0.0"
 flake8 = "^3.8.4"
+mypy = "^0.790"
 
 [build-system]
 requires = ["poetry>=0.12"]
