--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "ratelimit"
-version = "0.1.0"
+name = "rrl"
+version = "0.2.0"
 description = ""
 authors = ["James Turk <dev@jamesturk.net>"]
 license = "MIT"
