--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "rrl"
-version = "0.2.1"
-description = ""
+version = "0.2.2"
+description = "simple redis rate limiting"
 authors = ["James Turk <dev@jamesturk.net>"]
 license = "MIT"
 
