add readme to pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "rrl"
-version = "0.3.0"
+version = "0.3.1"
 description = "simple redis rate limiting"
 authors = ["James Turk <dev@jamesturk.net>"]
 license = "MIT"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7"
